--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Nashville Software School</title>
+        <title>NP Travel Website</title>
         <link rel="stylesheet" href="./styles/main.css">
     </head>
 
     <body>
         <main id="container">
-
+            <h2 class="country__name">Country Name</h2>
         </main>
-
+        <footer>Copyright info</footer>
         <script type="module" src="./scripts/main.js"></script>
     </body>
 </html>
