added the nav bar and country img html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 
     <body>
         <main id="container">
+            <!-- Nav bar -->
+            <nav class="nav__bar">
+                <ul>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </nav>
+
+            <!-- Country img -->
+            <img src="" alt="">
+
+
+
+
+
 
         </main>
 
