--- a/Japan.html
+++ b/Japan.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>NP Travel Website</title>
         <link rel="stylesheet" href="./styles/main.css">
+        <link rel="stylesheet" href="index.html">
     </head>
 
 <body>
