--- a/Japan.html
+++ b/Japan.html
@@ -5,6 +5,7 @@
         <title>NP Travel Website</title>
         <link rel="stylesheet" href="./styles/main.css">
         <link rel="stylesheet" href="index.html">
+        <link rel="stylesheet" href="./Japan.css">
     </head>
 
 <body>
@@ -13,9 +14,9 @@
         <!-- Nav bar -->
         <nav class="nav__bar">
             <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="Japan.html">Japan</a></li>
+                <li><a href="nepal.html">Nepal</a></li>
+                <li><a href="Jamaica.html">jamaica</a></li>
             </ul>
         </nav>
 
@@ -23,7 +24,7 @@
         <img src="https://cdn.cnn.com/cnnnext/dam/assets/170606121226-japan---travel-destination---shutterstock-230107657.jpg" alt="Picture of Japan">
         
 
-        <h2 class="country__name">Country Name w/ catchphrase</h2>
+        <h2 class="country__name">"Look at London or Paris: They're both filthy. You don't get that in Tokyo. The proud residents look after their city." - Tadao Ando</h2>
 
         <!-- Travis' Section -->
         <div class="country-container">
