--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="Japan.html">Japan</a></li>
                 <li><a href="nepal.html">Nepal</a></li>
-                <li><a href="jamaica.html">Jamaica</a></li>
+                <li><a href="Jamaica.html">Jamaica</a></li>
             </ul>
         </nav>
 
@@ -22,7 +22,7 @@
         <img src="" alt="">
         
 
-        <h2 class="country__name">Country Name w/ catchphrase</h2>
+        <h2 class="country__name">"Look at London or Paris: They're both filthy. You don't get that in Tokyo. The proud residents look after their city." - Tadao Ando</h2>
 
         <!-- Travis' Section -->
         <div class="country-container">
