--- a/nepal.html
+++ b/nepal.html
@@ -38,9 +38,9 @@
             <div class="country-card">
                 <h3 class="country__landmarks">List of landmarks</h3>
                 <ul class="list-of-landmarks">
-                    <li>Landmark 1</li>
-                    <li>Landmark 2</li>
-                    <li>Landmark 3</li>
+                    <li>Mount Everest</li>
+                    <li>The Annapurna Range</li>
+                    <li>Chitwan National Park</li>
                 </ul>
             </div>
 
