fixed the capital in Jamaica and added a 'trips' button to the nav bar

--- a/Japan.html
+++ b/Japan.html
@@ -14,9 +14,10 @@
         <!-- Nav bar -->
         <nav class="nav__bar">
             <ul>
+                <li><a href="index.html">Trips</a></li>
                 <li><a href="Japan.html">Japan</a></li>
                 <li><a href="nepal.html">Nepal</a></li>
-                <li><a href="Jamaica.html">jamaica</a></li>
+                <li><a href="Jamaica.html">Jamaica</a></li>
             </ul>
         </nav>
 
