--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="" alt="">
         
 
-        <h2 class="country__name">"Look at London or Paris: They're both filthy. You don't get that in Tokyo. The proud residents look after their city." - Tadao Ando</h2>
+        <h2 class="country__name"></h2>
 
         <!-- Travis' Section -->
         <div class="country-container">
