added landmarks, citizens, and nav bar links

--- a/nepal.html
+++ b/nepal.html
@@ -12,9 +12,9 @@
         <!-- Nav bar -->
         <nav class="nav__bar">
             <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="japan.html">Japan</a></li>
+                <li><a href="nepal.html">Nepal</a></li>
+                <li><a href="jamaica.html">Jamaica</a></li>
             </ul>
         </nav>
 
@@ -38,8 +38,8 @@
             <div class="country-card">
                 <h3 class="country__landmarks">List of landmarks</h3>
                 <ul class="list-of-landmarks">
-                    <li>Mount Everest</li>
-                    <li>The Annapurna Range</li>
+                    <li>Mt. Everest</li>
+                    <li>Annapurna Mt. Range</li>
                     <li>Chitwan National Park</li>
                 </ul>
             </div>
@@ -47,9 +47,8 @@
             <div class="country-card">
                 <h3 class="country__famous-citizens">List of famous citizens</h3>
                 <ul class="list-of-famous-citizens">
-                    <li>Citizen 1</li>
-                    <li>Citizen 2</li>
-                    <li>Citizen 3</li>
+                    <li>Gautama Buddha (Spiritual Leader)</li>
+                    <li>Tenzig Norgay (Moutaineer, 1st to summit Everest)</li>
                 </ul>
             </div>
         </div>
