--- a/nepal.html
+++ b/nepal.html
@@ -12,6 +12,7 @@
         <!-- Nav bar -->
         <nav class="nav__bar">
             <ul>
+                <li><a href="Index.html">Home Page</a></li>
                 <li><a href="japan.html">Japan</a></li>
                 <li><a href="nepal.html">Nepal</a></li>
                 <li><a href="jamaica.html">Jamaica</a></li>
