moved the nac bar to flow horizontal and finshed up HTML

--- a/jamaica.html
+++ b/jamaica.html
@@ -11,11 +11,11 @@
         <!-- Charlie's Section -->
         <!-- Nav bar -->
         <nav class="nav__bar">
-            <ul>
-                <li><a href="japan.html">Japan</a></li>
-                <li><a href="nepal.html">Nepal</a></li>
-                <li><a href="jamaica.html">Jamaica</a></li>
-            </ul>
+                <a href="index.html">Home</a>
+                <a href="japan.html">Japan</a>
+                <a href="nepal.html">Nepal</a>
+                <a href="jamaica.html">Jamaica</a>
+            
         </nav>
 
         <!-- Country img -->
