--- a/Japan.html
+++ b/Japan.html
@@ -13,12 +13,12 @@
         <!-- Charlie's Section -->
         <!-- Nav bar -->
         <nav class="nav__bar">
-            <ul>
-                <li><a href="index.html">Trips</a></li>
-                <li><a href="Japan.html">Japan</a></li>
-                <li><a href="nepal.html">Nepal</a></li>
-                <li><a href="Jamaica.html">Jamaica</a></li>
-            </ul>
+            
+                <a href="index.html">Home</a>
+                <a href="Japan.html">Japan</a>
+                <a href="nepal.html">Nepal</a>
+                <a href="Jamaica.html">Jamaica</a>
+            
         </nav>
 
         <!-- Country img -->
