fixed nav bar wording

--- a/nepal.html
+++ b/nepal.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>NP Travel Website</title>
+        <link rel="stylesheet" href="./styles/main.css">
         <link rel="stylesheet" href="./styles/nepal.css">
     </head>
 
@@ -11,12 +12,10 @@
         <!-- Charlie's Section -->
         <!-- Nav bar -->
         <nav class="nav__bar">
-            <ul>
-                <li><a href="Index.html">Home Page</a></li>
-                <li><a href="japan.html">Japan</a></li>
-                <li><a href="nepal.html">Nepal</a></li>
-                <li><a href="jamaica.html">Jamaica</a></li>
-            </ul>
+                <a href="Index.html">Home</a></li>
+                <a href="japan.html">Japan</a></li>
+                <a href="nepal.html">Nepal</a></li>
+                <a href="jamaica.html">Jamaica</a></li>
         </nav>
 
         <!-- Country img -->
