added the skeleton css to main.css git push origin cb-japan-css '

--- a/Japan.html
+++ b/Japan.html
@@ -12,6 +12,7 @@
     <main id="container">
         <!-- Charlie's Section -->
         <!-- Nav bar -->
+        <img src="https://cdn3.volusion.com/jmzxs.kwyaz/v/vspfiles/photos/japan-flg-2.jpg" alt="">
         <nav class="nav__bar">
             
                 <a href="index.html">Home</a>
