Removed the list in the card boxes

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <img src="" alt="">
         
 
-        <h2 class="country__name"></h2>
+        <!-- <h2 class="country__name"></h2> -->
 
         <!-- Travis' Section -->
-        <div class="country-container">
+        <!-- <div class="country-container">
             <div class="country-card">
                 <h3 class="country__cities">List of cities</h3>
                 <ul class="list-of-cities">
@@ -33,23 +33,23 @@
                     <li>City 2</li>
                     <li>City 3</li>
                 </ul>
-            </div>
+            </div> -->
 
-            <div class="country-card">
+            <!-- <div class="country-card">
                 <h3 class="country__landmarks">List of landmarks</h3>
                 <ul class="list-of-landmarks">
                     <li>Landmark 1</li>
                     <li>Landmark 2</li>
                     <li>Landmark 3</li>
                 </ul>
-            </div>
+            </div> -->
 
-            <div class="country-card">
+            <!-- <div class="country-card">
                 <h3 class="country__famous-citizens">List of famous citizens</h3>
                 <ul class="list-of-famous-citizens">
                     <li>Citizen 1</li>
                     <li>Citizen 2</li>
-                    <li>Citizen 3</li>
+                    <li>Citizen 3</li> -->
                 </ul>
             </div>
         </div>
