added banner image to landing page and removed list formatting from header

--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
         <!-- Charlie's Section -->
         <!-- Nav bar -->
         <nav class="nav__bar">
-            <ul>
-                <li><a href="Japan.html">Japan</a></li>
-                <li><a href="nepal.html">Nepal</a></li>
-                <li><a href="Jamaica.html">Jamaica</a></li>
-            </ul>
+            <a class="nav__bar-button" href="Japan.html">Japan</a>
+            <a class="nav__bar-button" href="nepal.html">Nepal</a>
+            <a class="nav__bar-button" href="Jamaica.html">Jamaica</a>
         </nav>
 
         <!-- Country img -->
-        <img src="" alt="">
+        <img class="image__banner" src="https://www.specialevents.com/sites/specialevents.com/files/styles/article_featured_retina/public/Air_Travel_Blue_2019.jpg?itok=4mOgdzn8" alt="global travel map">
         
 
         <h2 class="country__name"></h2>
