added home button to nav bar on landing page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!-- Charlie's Section -->
         <!-- Nav bar -->
         <nav class="nav__bar">
+            <a class="nav__bar-button" href="Index.html">Home</a></li>
             <a class="nav__bar-button" href="Japan.html">Japan</a>
             <a class="nav__bar-button" href="nepal.html">Nepal</a>
             <a class="nav__bar-button" href="Jamaica.html">Jamaica</a>
