changed the unordered list to div

--- a/jamaica.html
+++ b/jamaica.html
@@ -31,27 +31,27 @@
             <div class="country-card">
                 <h3 class="country__cities">List of cities</h3>
                 <ul class="list-of-cities">
-                    <li>Kingston</li>
-                    <li>Portmore</li>
-                    <li>Montego Bay</li>
+                    <div class="list__item">Kingston</div>
+                    <div class="list__item">Portmore</div>
+                    <div class='list__item'>Montego Bay</div>
                 </ul>
             </div>
 
             <div class="country-card">
                 <h3 class="country__landmarks">List of landmarks</h3>
                 <ul class="list-of-landmarks">
-                    <li>Bob Marley Museum</li>
-                    <li>Rose Hall Great House</li>
-                    <li>Dunn's River Falls & Park</li>
+                    <div class="list__item">Bob Marley Museum</div>
+                    <div class="list__item">Rose Hall Great House</div>
+                    <div class="list__item">Dunn's River Falls & Park</div>
                 </ul>
             </div>
 
             <div class="country-card">
                 <h3 class="country__famous-citizens">List of famous citizens</h3>
                 <ul class="list-of-famous-citizens">
-                    <li>Bob Marley</li>
-                    <li>Usain Bolt</li>
-                    <li>Jimmy Cliff</li>
+                    <div class="list__item">Bob Marley</div>
+                    <div class="list__item">Usain Bolt</div>
+                    <div class="list__item">Jimmy Cliff</div>
                 </ul>
             </div>
         </div>
