centered the text in the country cards.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!-- Charlie's Section -->
         <!-- Nav bar -->
         <nav class="nav__bar">
+            <img class="logo" src="https://www.flaticon.com/svg/static/icons/svg/776/776541.svg" alt="" srcset="">
             <a class="nav__bar-button" href="Japan.html">Japan</a>
             <a class="nav__bar-button" href="nepal.html">Nepal</a>
             <a class="nav__bar-button" href="Jamaica.html">Jamaica</a>
