fixed card centering issues in CSS, Capitalized country names in catchphrases, pinned Copyright footer to bottom of page with absolute positioning.

--- a/Japan.html
+++ b/Japan.html
@@ -27,40 +27,42 @@
         <img class="img__banner" src="https://cdn.cnn.com/cnnnext/dam/assets/170606121226-japan---travel-destination---shutterstock-230107657.jpg" alt="Picture of Japan">
         
 
-        <h2 class="country__name">"Look at London or Paris: They're both filthy. You don't get that in Tokyo. The proud residents look after their city." - Tadao Ando</h2>
+        <h2 class="country__name">JAPAN: Land of the Rising Sun</h2>
 
         <!-- Travis' Section -->
         <div class="country-container">
             <div class="country-card">
                 <h3 class="country__cities">List of cities</h3>
-                <ul class="list-of-cities">
+                <div class="list-of-cities">
                     <div class="list__item">Hida-Takayama</div>
                     <div class="list__item">Otaru</div>
                     <div class="list__item">Nara</div>
-                </ul>
+                </div>
             </div>
 
             <div class="country-card">
                 <h3 class="country__landmarks">List of landmarks</h3>
-                <ul class="list-of-landmarks">
+                <div class="list-of-landmarks">
                    <div class ="list__item">Shibuya Crossing </div>
                     <div class="list__item">Dotonbori </div>
                     <div class ="list__item">Mount Fuji</div>
-                </ul>
+                </div>
             </div>
 
             <div class="country-card">
                 <h3 class="country__famous-citizens">List of famous citizens</h3>
-                <ul class="list-of-famous-citizens">
+                <div class="list-of-famous-citizens">
                     <div class="list__item">Yoko Ono</div>     <!-- married to John Lennon-->
                     <div class="list__item">Olivia de Havilland</div>
                     <div class="list__item">Takeshi Kitano</div>
-                </ul>
+                </div>
             </div>
         </div>
     </main>
         <!-- Benjamin's Section -->
-        <footer>Copyright info</footer>
+        <footer>
+            <p>Copyright info</p>
+        </footer>
         <script type="module" src="./scripts/main.js"></script>
     </body>
 </html>
