--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
 
         <!-- Country img -->
-        <img class="image__banner" src="https://www.specialevents.com/sites/specialevents.com/files/styles/article_featured_retina/public/Air_Travel_Blue_2019.jpg?itok=4mOgdzn8" alt="global travel map">
+        <img class="img__banner" src="https://www.specialevents.com/sites/specialevents.com/files/styles/article_featured_retina/public/Air_Travel_Blue_2019.jpg?itok=4mOgdzn8" alt="global travel map">
         
 
         <!-- <h2 class="country__name"></h2> -->
