--- a/jamaica.html
+++ b/jamaica.html
@@ -24,35 +24,35 @@
         <img class="img__banner" src="https://hips.hearstapps.com/hbz.h-cdn.co/assets/16/40/1475951484-hbz-round-hills-jamaica-index.jpg" alt="Photo of Montego Bay">
         
 
-        <h2 class="country__name">Jamaica: Escape the Ordinary</h2>
+        <h2 class="country__name">JAMAICA: Escape the Ordinary</h2>
 
         <!-- Travis' Section -->
         <div class="country-container">
             <div class="country-card">
                 <h3 class="country__cities">List of cities</h3>
-                <ul class="list-of-cities">
+                <div class="list-of-cities">
                     <div class="list__item">Kingston</div>
                     <div class="list__item">Portmore</div>
                     <div class='list__item'>Montego Bay</div>
-                </ul>
+                </div>
             </div>
 
             <div class="country-card">
                 <h3 class="country__landmarks">List of landmarks</h3>
-                <ul class="list-of-landmarks">
+                <div class="list-of-landmarks">
                     <div class="list__item">Bob Marley Museum</div>
                     <div class="list__item">Rose Hall Great House</div>
                     <div class="list__item">Dunn's River Falls & Park</div>
-                </ul>
+                </div>
             </div>
 
             <div class="country-card">
                 <h3 class="country__famous-citizens">List of famous citizens</h3>
-                <ul class="list-of-famous-citizens">
+                <div class="list-of-famous-citizens">
                     <div class="list__item">Bob Marley</div>
                     <div class="list__item">Usain Bolt</div>
                     <div class="list__item">Jimmy Cliff</div>
-                </ul>
+                </div>
             </div>
         </div>
     </main>
