--- a/nepal.html
+++ b/nepal.html
@@ -29,28 +29,28 @@
         <div class="country-container">
             <div class="country-card">
                 <h3 class="country__cities">List of cities</h3>
-                <ul class="list-of-cities">
+                <div class="list-of-cities">
                     <div class="list__item">Khatmandu</div>
                     <div class="list__item">Pokhara</div>
                     <div class="list__item">Bhaktapur</div>
-                </ul>
+                </div>
             </div>
 
             <div class="country-card">
                 <h3 class="country__landmarks">List of landmarks</h3>
-                <ul class="list-of-landmarks">
+                <div class="list-of-landmarks">
                     <div class="list__item">Mt. Everest</div>
                     <div class="list__item">Annapurna Mt. Range</div>
                     <div class="list__item">Chitwan National Park</div>
-                </ul>
+                </div>
             </div>
 
             <div class="country-card">
                 <h3 class="country__famous-citizens">List of famous citizens</h3>
-                <ul class="list-of-famous-citizens">
+                <div class="list-of-famous-citizens">
                     <div class="list__item">Gautama Buddha (Spiritual Leader)</div>
                     <div class="list__item">Tenzig Norgay (Moutaineer, 1st to summit Everest)</div>
-                </ul>
+div                </div>
             </div>
         </div>
     </main>
