rounded edges cards, fixed floating footer, added sans-serif font for headers

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
         </div>
     </main>
         <!-- Benjamin's Section -->
-        <footer>Copyright info</footer>
+        <footer>
+            <p>Copyright info</p>
+        </footer>
         <script type="module" src="./scripts/main.js"></script>
     </body>
 </html>
