--- a/nepal.html
+++ b/nepal.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <title>NP Travel Website</title>
         <link rel="stylesheet" href="./styles/main.css">
-        <link rel="stylesheet" href="./styles/nepal.css">
     </head>
 
 <body>
@@ -50,12 +49,14 @@
                 <div class="list-of-famous-citizens">
                     <div class="list__item">Gautama Buddha (Spiritual Leader)</div>
                     <div class="list__item">Tenzig Norgay (Moutaineer, 1st to summit Everest)</div>
-div                </div>
+               </div>
             </div>
         </div>
     </main>
         <!-- Benjamin's Section -->
-        <footer>Copyright info</footer>
+        <footer>
+            <p>Copyright info</p>
+        </footer>
         <script type="module" src="./scripts/main.js"></script>
     </body>
 </html>
