--- a/jamaica.html
+++ b/jamaica.html
@@ -57,7 +57,9 @@
         </div>
     </main>
         <!-- Benjamin's Section -->
-        <footer>Copyright info</footer>
+        <footer>
+            <p>Copyright info</p>
+        </footer>
         <script type="module" src="./scripts/main.js"></script>
     </body>
 </html>
