added functionality to show which page is active via id tags in HTML applying a solid black border

--- a/jamaica.html
+++ b/jamaica.html
@@ -15,7 +15,10 @@
                 <a class="nav__bar-button" href="index.html">Home</a>
                 <a class="nav__bar-button" href="japan.html">Japan</a>
                 <a class="nav__bar-button" href="nepal.html">Nepal</a>
-                <a class="nav__bar-button" href="jamaica.html">Jamaica</a>
+                <div id="active__page">
+                    <a class="nav__bar-button" href="jamaica.html">Jamaica</a>
+                </div>
+                
             
 
         </nav>
