--- a/nepal.html
+++ b/nepal.html
@@ -14,7 +14,9 @@
             <img class="logo" src="https://www.flaticon.com/svg/static/icons/svg/776/776541.svg" alt="" srcset="">
             <a class="nav__bar-button" href="index.html">Home</a>
             <a class="nav__bar-button" href="Japan.html">Japan</a>
-            <a class="nav__bar-button" href="nepal.html">Nepal</a>
+            <div id="active__page">
+                <a class="nav__bar-button" href="nepal.html">Nepal</a>
+            </div>
             <a class="nav__bar-button" href="Jamaica.html">Jamaica</a>
         </nav>
 
