--- a/Japan.html
+++ b/Japan.html
@@ -17,7 +17,9 @@
         <nav class="nav__bar">
             <img class="logo" src="https://www.flaticon.com/svg/static/icons/svg/776/776541.svg" alt="" srcset="">
                 <a class="nav__bar-button" href="index.html">Home</a>
-                <a class="nav__bar-button" href="Japan.html">Japan</a>
+                <div id="active__page">
+                    <a class="nav__bar-button" href="Japan.html">Japan</a>
+                </div>
                 <a class="nav__bar-button" href="nepal.html">Nepal</a>
                 <a class="nav__bar-button" href="Jamaica.html">Jamaica</a>
             
