--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <div>
                 <img class="logo" src="https://www.flaticon.com/svg/static/icons/svg/776/776541.svg" alt="" srcset="">
             </div> 
-            <div>
-                <a class="nav__bar-button" href="japan.html">Japan</a>
+            <div id="active__page">
+                <a class="nav__bar-button" href="index.html">Home </a>
             </div>
             <div>
-                <a class="nav__bar-button" href="index.html">Home</a>
+                <a class="nav__bar-button" href= "japan.html">Japan</a>
             </div>
             <div>
                 <a class="nav__bar-button" href="nepal.html">Nepal</a>
