added copyright statement, made copyright light grey, added margin between banner image and nav bar

--- a/Japan.html
+++ b/Japan.html
@@ -63,7 +63,7 @@
     </main>
         <!-- Benjamin's Section -->
         <footer>
-            <p>Copyright info</p>
+            <p>Copyright 2020 Charles Butterworth, Travis Stevenson,  Benjamin Schweizer. All Rights Unreserved.</p>
         </footer>
         <script type="module" src="./scripts/main.js"></script>
     </body>
