populated List of cities by automation through cities sub directory and 3 js modules

--- a/nepal.html
+++ b/nepal.html
@@ -31,9 +31,9 @@
             <div class="country-card">
                 <h3 class="country__cities">List of cities</h3>
                 <div class="list-of-cities">
-                    <div class="list__item">Khatmandu</div>
+                    <!-- <div class="list__item">${citylist.name}</div> 
                     <div class="list__item">Pokhara</div>
-                    <div class="list__item">Bhaktapur</div>
+                    <div class="list__item">Bhaktapur</div> -->
                 </div>
             </div>
 
@@ -59,6 +59,6 @@
         <footer>
             <p>Copyright 2020 Charles Butterworth, Travis Stevenson,  Benjamin Schweizer. All Rights Unreserved.</p>
         </footer>
-        <script type="module" src="./scripts/main.js"></script>
+        <script type="module" src="./scripts/nepal/main.js"></script>
     </body>
 </html>
