added in all the city js

--- a/Japan.html
+++ b/Japan.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>NP Travel Website</title>
         <link rel="stylesheet" href="./styles/main.css">
-        <link rel="stylesheet" href="index.html">
-        <link rel="stylesheet" href="./Japan.css">
+        <!-- <link rel="stylesheet" href="index.html"> -->
+        <!-- <link rel="stylesheet" href="./Japan.css"> -->
     </head>
 
 <body>
@@ -34,11 +34,11 @@
         <!-- Travis' Section -->
         <div class="country-container">
             <div class="country-card">
-                <h3 class="country__cities">List of cities</h3>
+                <h3 class="country_card">List of cities</h3>
                 <div class="list-of-cities">
-                    <div class="list__item">Hida-Takayama</div>
+                    <!-- <div class="list__item">Hida-Takayama</div>
                     <div class="list__item">Otaru</div>
-                    <div class="list__item">Nara</div>
+                    <div class="list__item">Nara</div> -->
                 </div>
             </div>
 
@@ -65,6 +65,6 @@
         <footer>
             <p>Copyright 2020 Charles Butterworth, Travis Stevenson,  Benjamin Schweizer. All Rights Unreserved.</p>
         </footer>
-        <script type="module" src="./scripts/main.js"></script>
+        <script type="module" src="./scripts/japan/main.js"></script>
     </body>
 </html>
