--- a/nepal.html
+++ b/nepal.html
@@ -40,9 +40,9 @@
             <div class="country-card">
                 <h3 class="country__landmarks">List of landmarks</h3>
                 <div class="list-of-landmarks">
-                    <div class="list__item">Mt. Everest</div>
+                    <!-- <div class="list__item">Mt. Everest</div>
                     <div class="list__item">Annapurna Mt. Range</div>
-                    <div class="list__item">Chitwan National Park</div>
+                    <div class="list__item">Chitwan National Park</div> -->
                 </div>
             </div>
 
