--- a/nepal.html
+++ b/nepal.html
@@ -49,8 +49,8 @@
             <div class="country-card">
                 <h3 class="country__famous-citizens">List of famous citizens</h3>
                 <div class="list-of-famous-citizens">
-                    <div class="list__item">Gautama Buddha (Spiritual Leader)</div>
-                    <div class="list__item">Tenzig Norgay (Moutaineer, 1st to summit Everest)</div>
+                    <!-- <div class="list__item">Gautama Buddha (Spiritual Leader)</div>
+                    <div class="list__item">Tenzig Norgay (Moutaineer, 1st to summit Everest)</div> -->
                </div>
             </div>
         </div>
