added in the rest of js. Updates cities and landmarks

--- a/Japan.html
+++ b/Japan.html
@@ -45,18 +45,18 @@
             <div class="country-card">
                 <h3 class="country__landmarks">List of landmarks</h3>
                 <div class="list-of-landmarks">
-                   <div class ="list__item">Shibuya Crossing </div>
+                   <!-- <div class ="list__item">Shibuya Crossing </div>
                     <div class="list__item">Dotonbori </div>
-                    <div class ="list__item">Mount Fuji</div>
+                    <div class ="list__item">Mount Fuji</div> -->
                 </div>
             </div>
 
             <div class="country-card">
                 <h3 class="country__famous-citizens">List of famous citizens</h3>
                 <div class="list-of-famous-citizens">
-                    <div class="list__item">Yoko Ono</div>     <!-- married to John Lennon-->
-                    <div class="list__item">Olivia de Havilland</div>
-                    <div class="list__item">Takeshi Kitano</div>
+                    <!-- <div class="list__item">Yoko Ono</div>     <!-- married to John Lennon-->
+                    <!-- <div class="list__item">Olivia de Havilland</div>
+                    <div class="list__item">Takeshi Kitano</div> -->
                 </div>
             </div>
         </div>
